// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-react-native-style rpx convert: rpx convert 1`] = `
"
const styles = stylesheet.create({ padding: 1 })

      ↓ ↓ ↓ ↓ ↓ ↓

var __RPX = require(\\"babel-plugin-react-native-style-runtime\\").__RPX;

const styles = stylesheet.create({
  paddingTop: __RPX(1, 750),
  paddingRight: __RPX(1, 750),
  paddingBottom: __RPX(1, 750),
  paddingLeft: __RPX(1, 750)
});
"
`;

exports[`babel-plugin-react-native-style specific rpx: specific rpx 1`] = `
"
function call() { return 1 };
const height = call() + '100rpx'+ 30;
const styles = stylesheet.create({ padding: \\"1rpx\\", height })

      ↓ ↓ ↓ ↓ ↓ ↓

var __RPX = require(\\"babel-plugin-react-native-style-runtime\\").__RPX;

function call() {
  return 1;
};
const height = call() + __RPX(100, 750) + 30;
const styles = stylesheet.create({
  paddingTop: __RPX(1, 750),
  paddingRight: __RPX(1, 750),
  paddingBottom: __RPX(1, 750),
  paddingLeft: __RPX(1, 750),
  height });
"
`;
